@@ -1,3 +1,13 @@
+Changes in @NEW@:
+    * When using the tagScript argument with the client's applyUpdateJob
+      call, the paths to group scripts to be executed are stored relative
+      to the root of the installation, instead of absolute. The tag
+      script is always supposed to be executed under chroot. (CNY-2523)
+    * When resuming the update after the execution of a critical update,
+      Conary will now use the original file replacement flags. This
+      corrects file conflict errors in a migrate when a critical update
+      was present. (CNY-2513)
+
 Changes in 1.2.17:
   o Build Changes:
     * Java dependencies for classes that are not dependency-complete
